services/ni/niddle/01-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: niddle-staging
  namespace: niddle-staging
  annotations:
    keel.sh/policy: "force"
    keel.sh/match-tag: "true" 
spec:
  selector:
    matchLabels:
      app: niddle-staging
  template:
    metadata:
      labels:
        app: niddle-staging
    spec:
      imagePullSecrets:
        - name: harbor-pull-secret
      containers:
      - name: niddle-staging
        image: registry.niaefeup.pt/niaefeup/niddle:develop
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: niddle-staging-service
  namespace: niddle-staging
spec:
  selector:
    app: niddle-staging
  ports:
  - port: 80
    targetPort: 3000
  type: "ClusterIP"
