services/ni/niddle/03-ingress-routes.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: niddle-staging-https
  namespace: niddle-staging
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`niddle-staging.niaefeup.pt`)
      kind: Rule
      services:
        - name: niddle-staging-service
          port: 80
  tls:
    secretName: niddle-staging-cert
